# pydmt

./: .gitignore  .myenv  .pylintrc  Makefile  README.md  README.rst  build.py  config.py  pyproject.toml  requirements.thawed.txt  requirements.txt  run_insepctions.bash  run_insepections.bash  run_tests.bash  setup.py
.github/workflows/: build.yml
config/: apt.py  deb.py  github.py  helpers.py  project.py  python.py  tdefs.py  version.py
doc/: DONE.txt  TODO.txt  builder_name.txt  cicd_build_vs_regular_build.txt  config_overhaul.txt  design.txt  design_detailed.txt  multi_template.txt  nomenclature.txt  python_module_search_path.txt  requirements_semantics.txt  similar_projects.txt  sphinx.txt  top_level.txt
doc/python/: bootstrap_python_config_file.txt  the_config_python_file_and_pydmt.txt
docs/: .buildinfo  404.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pydmt.api.html  pydmt.builders.html  pydmt.core.html  pydmt.endpoints.html  pydmt.features.html  pydmt.helpers.html  pydmt.html  pydmt.scripts.html  pydmt.utils.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pydmt.api.doctree  pydmt.builders.doctree  pydmt.core.doctree  pydmt.doctree  pydmt.features.doctree  pydmt.helpers.doctree  pydmt.utils.doctree
docs/_modules/: index.html
docs/_modules/pydmt/: configs.html  main.html
docs/_sources/: index.rst.txt  pydmt.api.rst.txt  pydmt.builders.rst.txt  pydmt.core.rst.txt  pydmt.features.rst.txt  pydmt.helpers.rst.txt  pydmt.rst.txt  pydmt.scripts.rst.txt  pydmt.utils.rst.txt
docs/_static/: basic.css  doctools.js  documentation_options.js  searchtools.js
pydmt/: configs.py  main.py  static.py  version.py
pydmt/api/: builder.py  copy.py  fail.py  feature.py  one_source_one_target.py
pydmt/builders/: apt.py  copy.py  fail.py  gem.py  installer.py  make.py  mako.py  npm.py  reqs.py  sphinx.py  venv.py  venv_full.py  yaml.py
pydmt/core/: cache.py  graph.py  pydmt.py  tempdir.py  utils.py
pydmt/endpoints/: group_default.py  main.py
pydmt/features/: apt.py  documentation.py  gem.py  make.py  mako.py  npm.py  packages.py  reqs.py  sphinx.py  templating.py  venv.py  venv_full.py  yaml.py
pydmt/helpers/: apt.py  attrs.py  composites.py  deb.py  deb_python_package.py  files.py  general.py  git.py  github.py  misc.py  pkgs.py  project.py  python.py  signature.py  snipplets.py  tdefs.py  urls.py
pydmt/scripts/: build.py  pydmt_build.py
pydmt/utils/: digest.py  digester.py  filesystem.py  importlib.py  logging.py  php.py  python.py  subprocess.py
sphinx/: conf.py  modules.rst  pydmt.api.rst  pydmt.builders.rst  pydmt.core.rst  pydmt.endpoints.rst  pydmt.features.rst  pydmt.helpers.rst  pydmt.rst  pydmt.scripts.rst  pydmt.utils.rst
sphinx.moved/: pydmt.rst
sphinx/copy/: 404.html
src/pydmt/: configs.py  main.py  static.py
src/pydmt/api/: builder.py  copy.py  fail.py  one_source_one_target.py
src/pydmt/builders/: apt.py  copy.py  gem.py  make.py  mako.py  npm.py  reqs.py  sphinx.py  venv.py
src/pydmt/core/: cache.py  pydmt.py  tempdir.py
src/pydmt/features/: gem.py  mako.py  npm.py  sphinx.py  venv.py  yaml.py
src/pydmt/helpers/: apt.py  composites.py  deb.py  files.py  git.py  github.py  messages.py  (+3 more)
templates/: LICENSE.mako  README.md.mako  README.rst.mako  requirements.txt.mako  setup.py.mako
templates/pydmt/: static.py.mako
tests/unit_tests/: test_all.py
(+67 files in other folders)
