[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydmt"
version = "0.3.20"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Python dependency management tool"
readme = "README.md"
license = "MIT"
keywords=[
    "pydmt",
    "cons",
    "scons",
    "software-construction",
    "make",
    "cmake",
    "maven",
    "mvn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyfakeuse",
    "pylogconf",
    "pytconf",
    "mako",
    "sphinx",
    "pyyaml",
    "jsonschema",
    "venv-run",
    "gitpython",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pydmt"
"Bug Tracker" = "https://github.com/veltzer/pydmt/issues"
"Documentation" = "https://veltzer.github.io/pydmt"
"Download" = "https://pypi.org/project/pydmt/"
"Repository" = "https://github.com/veltzer/pydmt"

[project.scripts]
pydmt = "pydmt.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
